Somewhat finished work experience. May want to fix some small details on smaller screen, but will be good for now

--- a/ajlange/src/App.css
+++ b/ajlange/src/App.css
@@ -23,6 +23,9 @@
   .flex-row-experience-reverse {
     flex-direction: column-reverse;
   }
+  .image-margin{
+    padding-top: 50px;
+  }
   .lime-full {
     width: 100%;
     height: auto; /* Let content dictate height */
